# TSIS-LAB01

./: .travis.yml  CMakeLists.txt  README.md  RESULT.txt
include/: GoldrenSection.h  MyFunction.h  OptimalPassiveSearch.h
includes/: GoldrenSection.h  OptimalPassiveSearch.h
sources/: GoldrenSection.cpp  OptimalPassiveSearch.cpp  TSIS_LAB01.cpp
